# CricAlgo

./: .env.bot  .env.example  .gitignore  ADMIN_DIAGNOSTIC_ANALYSIS.md  ADMIN_FIXES_SUMMARY.md  AUDIT_SUMMARY.md  AUTOMATION_README.md  BOT_AND_DASHBOARD_FIXES_SUMMARY.md  BOT_ENUM_FIX_SUMMARY.md  BOT_FEATURES_IMPLEMENTATION_SUMMARY.md  COMPLETE_FIX_SUMMARY.md  CONTEST_SETTLEMENT_IMPLEMENTATION_SUMMARY.md  CRICALGO_FUNCTIONALITY_REPORT.md  DASHBOARD_BUILD_SUMMARY.md  DASHBOARD_FIX_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_RULES.md  DOCKER_BOT_UPDATE_SUMMARY.md  Dockerfile  Dockerfile.bot  Dockerfile.fake-blockchain  Dockerfile.production  ERD.md  FAILURE_SUMMARY.md  FINAL_FIX_SUMMARY.md  FIX_TESTS_README.md  FIX_WINNER_RANK_README.md  IMPROVED_MATCHES_SUMMARY.md  Makefile  PERFORMANCE_IMPROVEMENTS_SUMMARY.md  PERFORMANCE_ROLLOUT_README.md  PERFORMANCE_ROLLOUT_SUMMARY.md  QUICK_REFERENCE.md  RAILWAY_DEPLOYMENT_CHECKLIST.md  README.md  REFACTOR_TASKS.md  SERVICE_MANAGEMENT.md  SMOKE_TEST_IMPLEMENTATION.md  acceptance_step2.md  admin_demo.html  (+77 more)
.github/: PR_BODY.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-admin-ui.yml  ci.yml  deploy-staging.yml  premerge.yml  smoke-test.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0003_deposit_processed_flag.py  0004_contest_settlement.py  0005_normalize_contests_schema.py  20250921150419_normalize_contest_transaction_enums.py  51656e27311c_add_winner_rank_to_contest_entries.py  a199f1aba872_fix_contest_status_enum.py  bc2fb10cef1e_create_match_status_enum.py
app/: __init__.py  celery_app.py  main.py
app/api/: admin_finance.py  admin_finance_real.py  admin_manage.py  admin_matches_contests.py  admin_ui.py  health.py  webhooks.py
app/bot/: run_polling.py  telegram_bot.py
app/core/: auth.py  config.py  redis_client.py
app/db/: base.py  session.py
app/middleware/: rate_limit.py
app/models/: __init__.py  admin.py  audit_log.py  chat_map.py  contest.py  contest_entry.py  enums.py  invitation_code.py  match.py  transaction.py  user.py  wallet.py  withdrawal.py
app/repos/: admin_repo.py  audit_log_repo.py  chat_map_repo.py  contest_entry_repo.py  contest_repo.py  deposit_repo.py  invite_code_repo.py  match_repo.py  transaction_repo.py  user_repo.py  wallet_repo.py  wallet_repo_fixed.py  withdrawal_repo.py
app/scripts/: seed_admin.py  seed_admin_static.py  seed_sample_match_contest.py
app/services/: blockchain.py  settlement.py
app/tasks/: deposits.py  deposits.py.bak.20250920T200135Z  match_status.py  notify.py  scheduler.py  tasks.py  webhook_processing.py
artifacts/: admin_diag_20250922T100422Z.json  admin_diag_20250922T115516Z.json  bot_baseline_tests_20250922_211252.txt  bot_baseline_tests_20250922_211458.txt  bot_baseline_tests_20250922_212135.txt  bot_final_tests_20250922_220241.txt  get_db_usages.txt  routes_list.txt  smoke_test_final.json  smoke_test_result.json  smoke_test_run_report.json  smoke_test_summary.txt  tests_run_after_fix_20250122.txt  tests_run_before_fix_20250122.txt
artifacts/bot_live_smoke_20250923T002253Z/: match_create.json
artifacts/bot_live_smoke_20250923T002326Z/: app_log.txt  contest_create.json  deposit_webhook_payload_u1.json  deposit_webhook_resp_u1.json  health.json  match_create.json  settle_response.json  smoke_test_summary.json  telegram_getUpdates.json  user2_lookup.json  worker_log.txt
artifacts/deploy_20250921T162100Z/: deployment_summary.md
deploy/: nginx.conf
docs/: AUTOMATION_GUIDE.md  BOT_FUNCTIONALITY_VERIFICATION_REPORT.md  BOT_MATCHES_TESTING.md  BOT_USER_GUIDE.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTEST_CANCELLATION_IMPLEMENTATION.md  CONTEST_SETTLEMENT_FIXES_SUMMARY.md  IMPROVED_MATCHES_FUNCTIONALITY.md  bot.md  compliance-checklist.md  runbook.md  runbook_prod_rollout.md
k8s/: app-deployment.yaml  bot-deployment.yaml  namespace.yaml  secret.yaml
monitoring/: alerts.yaml
scripts/: SMOKE_TEST_DOCUMENTATION.md  create_admin.ps1  create_admin.py  create_admin_token.py  demo_automation.sh  full_rollout_automation.sh  generate_admin_diag.py  improved_smoke_test.sh  istio_weight_replacer.sh  performance_monitor.sh  rollback.sh  rotate_secret.sh  run_smoke_test.bat  run_smoke_test_powershell.ps1  seed_for_admin_tests.py  seed_invite_codes.py  seed_transactions.py  simulate_deposit_and_notify.py  smoke_test.env.example  smoke_test.py  smoke_test.sh  test_basic.py  test_bot_imports.py  test_bot_matches.py  test_bot_matches_fix.py  test_docker_bot.ps1  test_docker_bot.sh  test_docker_bot_simple.ps1  test_improved_matches.py  validate_environment.sh
tests/: conftest.py  test_db_models.py  test_health.py
(+272 files in other folders)
