[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cricalgo"
version = "0.1.0"
description = "Cricket Algorithm Trading Bot"
authors = [
    {name = "CricAlgo Team", email = "team@cricalgo.com"}
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # FastAPI and web framework
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    
    # Database
    "sqlalchemy[asyncio]==2.0.23",
    "asyncpg==0.29.0",
    "alembic==1.12.1",
    
    # Redis
    "redis>=4.6.0",
    
    # Telegram Bot
    "aiogram==3.2.0",
    
    # Configuration
    "pydantic[email]==2.5.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    
    # HTTP client
    "httpx==0.25.2",
    
    # Celery
    "celery==5.3.4",
    
    # JWT Authentication
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    
    # Rate limiting
    "slowapi==0.1.9",
    
    # Prometheus metrics
    "prometheus-client==0.19.0",
    
    # Sentry integration
    "sentry-sdk[fastapi]==1.38.0",
    
    # Development
    "python-multipart==0.0.6",
    
    # Password hashing and 2FA
    "pyotp==2.9.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-xdist==3.3.1",
    "pytest-cov==4.1.0",
    
    # Linting and formatting
    "ruff==0.1.6",
    "black==23.11.0",
    
    # Load testing
    "k6==0.57.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
target-version = ['py311']
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
